Fix T60068: missing viewport update when renaming objects in outliner.

Differential Revision: https://developer.blender.org/D4155