source/blender/editors/space_outliner/outliner_draw.c
@@ -341,6 +341,7 @@ static void namebutton_cb(bContext *C, void *tsep, char *oldname)
 					if (ob->type == OB_MBALL) {
 						DEG_id_tag_update(&ob->id, ID_RECALC_GEOMETRY);
 					}
+					DEG_id_tag_update(&ob->id, ID_RECALC_COPY_ON_WRITE);
 					WM_event_add_notifier(C, NC_ID | NA_RENAME, NULL); break;
 				}
 				default:
